# pymaniacs_tg_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
py_bot/: .env.example  bot.py  gpt.py  open_weather.py  utils.py
py_bot/resources/messages/: main.txt  quiz.txt  talk.txt
py_bot/resources/prompts/: advisor.txt  quiz.txt  random.txt  talk_cobain.txt  talk_feynman.txt  talk_hawking.txt  talk_martin.txt  talk_nietzsche.txt  talk_queen.txt  talk_tolkien.txt  translate.txt  vocabulary.txt  weather_forecast.txt
